try/envoy.yaml
node:
    id: localhost-ekglue-try
    cluster: localhost-ekglue-try
    locality:
        region: localhost
        zone: localhost
admin:
    access_log_path: /dev/stdout
    address:
        socket_address:
            protocol: TCP
            address: 127.0.0.1
            port_value: 9901
static_resources:
    listeners:
        - name: debug-http-passthru
          address:
              socket_address:
                  protocol: TCP
                  address: 127.0.0.1
                  port_value: 10000
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                          stat_prefix: all:debug
                          route_config:
                              virtual_hosts:
                                  - name: all:debug
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/" }
                                          route: { cluster: "debug" }
                              validate_clusters: false
                          http_filters:
                              - name: envoy.router
    clusters:
        - name: cds
          connect_timeout: 10s
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: RANDOM
          http2_protocol_options: {}

          upstream_connection_options:
              tcp_keepalive: {}
          health_checks:
              - timeout: 1s
                interval: 10s
                healthy_threshold: 1
                unhealthy_threshold: 1
                grpc_health_check: {}
          load_assignment:
              cluster_name: cds
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: localhost
                                      port_value: 9000
dynamic_resources:
    cds_config:
        resource_api_version: V2
        api_config_source:
            api_type: GRPC
            transport_api_version: V2
            grpc_services:
                envoy_grpc:
                    cluster_name: cds
